<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/kofe_kniga_podokonnik_130911_225x300"
    tools:context=".MainActivity"
    android:id="@+id/root_element">


    <FrameLayout
        android:id="@+id/fragmentLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/suez_one"
            android:text="@string/app_in_name"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="35sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_thin"
            android:layout_marginTop="20dp"
            android:text="@string/app_name_after"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

    </LinearLayout>
    <FrameLayout
        android:id="@+id/fragmentChose"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>
    <FrameLayout
        android:id="@+id/fragmentOrderInfo"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>
    <TextView
        android:id="@+id/text_bottom"
        android:layout_width="404dp"
        android:layout_height="20dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/montserrat_thin"
        android:text="@string/text_bottom"
        android:textAlignment="center"
        android:textColor="@color/teal_200"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="@+id/text_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <Button
            android:id="@+id/buttonLogIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_login"
            android:fontFamily="@font/montserrat_thin"
            android:gravity="center"
            android:text="@string/LogIn"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_signup"
            android:fontFamily="@font/montserrat_thin"
            android:gravity="center"
            android:text="@string/SignUp"
            android:textColor="@android:color/white" />
    </LinearLayout>
<!--
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.makeorder.LoginFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toBottomOf="@+id/text_bottom"
        app:layout_constraintTop_toTopOf="@+id/linearLayout"
        tools:ignore="MissingConstraints" />
    <fragment
        android:id="@+id/choseFragment"
        android:name="com.example.makeorder.ChoseFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toBottomOf="@+id/text_bottom"
        app:layout_constraintTop_toTopOf="@+id/linearLayout"
        tools:ignore="MissingConstraints" />-->
</androidx.constraintlayout.widget.ConstraintLayout>